--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eclint",
-  "version": "2.8.1",
+  "name": "editorcfg-cli",
+  "version": "3.0.0",
   "description": "Validate or fix code that doesn't adhere to EditorConfig settings or infer settings from existing code.",
   "keywords": [
     "editorconfig",
@@ -12,7 +12,7 @@
     "gulpplugin"
   ],
   "bin": {
-    "eclint": "bin/eclint.js"
+    "editorcfg": "bin/eclint.js"
   },
   "main": "dist/eclint.js",
   "types": "dist/eclint.d.ts",
