--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "lib": [
-      "es2015"
-    ],
+    "lib": ["es2015"],
     "module": "commonjs",
     "noImplicitAny": false,
     "noUnusedLocals": true,
@@ -12,7 +10,5 @@
     "sourceMap": true,
     "target": "es5"
   },
-  "include": [
-    "lib/**/*.ts"
-  ]
+  "include": ["lib/**/*.ts"]
 }
